[200~Updated index.html with improved login and register features

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       border-radius: 15px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
       width: 500px;
-      height: 300px;
+      height: auto;
       text-align: center;
     }
     h2 {
@@ -84,6 +84,8 @@
   </style>
 </head>
 <body>
+
+  <!-- USER LOGIN + REGISTER BOX -->
   <div class="container" id="authContainer">
     <h2 id="formTitle">Login</h2>
     <input type="text" id="username" placeholder="Username" required>
@@ -92,192 +94,206 @@
     <p class="forgot-password" onclick="forgotPassword()">Forgot Password?</p>
     <p class="toggle" onclick="toggleForm()">Don't have an account? Register</p>
   </div>
+
+  <!-- RESET PASSWORD -->
   <div class="container" style="display: none;" id="resetContainer">
     <h2>Reset Password</h2>
     <input type="email" id="resetEmail" placeholder="Enter registered email" required>
     <button onclick="sendOTP()">Send OTP</button>
     <p class="toggle" onclick="showLogin()">Back to Login</p>
   </div>
+
+  <!-- OTP BOX -->
   <div class="container" style="display: none;" id="otpContainer">
     <h2>Enter OTP</h2>
     <input type="text" id="otpInput" placeholder="Enter OTP" required>
     <button onclick="verifyOTP()">Verify OTP</button>
   </div>
+
+  <!-- SET NEW PASSWORD -->
   <div class="container" style="display: none;" id="newPasswordContainer">
     <h2>Set New Password</h2>
     <input type="password" id="newPassword" placeholder="Enter new password" required>
     <button onclick="resetPassword()">Reset Password</button>
   </div>
+
+  <!-- ADMIN LOGIN BOX -->
   <div class="container">
     <h2>Admin Login</h2>
-    <input type="text" id="adminusername" placeholder="Username" required>
-    <input type="password" id="adminpassword" placeholder="Password" required>
+    <input type="text" id="adminusername" placeholder="Admin Username" required>
+    <input type="password" id="adminpassword" placeholder="Admin Password" required>
     <button onclick="handleAdminLogin()">Login</button>
   </div>
 
-  <script>
-    let isLogin = true;
+<script>
+  let isLogin = true;
+  let currentOtp = null;
+  let currentOtpEmail = null;
 
-    function toggleForm() {
-      isLogin = !isLogin;
-      document.getElementById('authContainer').innerHTML = isLogin
-        ? `<h2 id="formTitle">Login</h2>
-           <input type="text" id="username" placeholder="Username" required>
-           <input type="password" id="password" placeholder="Password" required>
-           <button onclick="handleAuth()">Login</button>
-           <p class="forgot-password" onclick="forgotPassword()">Forgot Password?</p>
-           <p class="toggle" onclick="toggleForm()">Don't have an account? Register</p>`
-        : `<h2>Register</h2>
-           <input type="text" id="username" placeholder="Username" required>
-           <input type="email" id="email" placeholder="Email" required>
-           <input type="password" id="password" placeholder="Password" required>
-           <button onclick="handleAuth()">Register</button>
-           <p class="toggle" onclick="toggleForm()">Already have an account? Login</p>`;
+  // load users from localStorage
+  function getUsers() {
+    return JSON.parse(localStorage.getItem("users") || "[]");
+  }
+
+  function saveUsers(users) {
+    localStorage.setItem("users", JSON.stringify(users));
+  }
+
+  // 🔄 Toggle Login / Register Form
+  function toggleForm() {
+    isLogin = !isLogin;
+    document.getElementById('authContainer').innerHTML = isLogin
+      ? `<h2 id="formTitle">Login</h2>
+         <input type="text" id="username" placeholder="Username" required>
+         <input type="password" id="password" placeholder="Password" required>
+         <button onclick="handleAuth()">Login</button>
+         <p class="forgot-password" onclick="forgotPassword()">Forgot Password?</p>
+         <p class="toggle" onclick="toggleForm()">Don't have an account? Register</p>`
+      : `<h2>Register</h2>
+         <input type="text" id="username" placeholder="Username" required>
+         <input type="email" id="email" placeholder="Email" required>
+         <input type="password" id="password" placeholder="Password" required>
+         <button onclick="handleAuth()">Register</button>
+         <p class="toggle" onclick="toggleForm()">Already have an account? Login</p>`;
+  }
+
+  // 🔐 User Login / Register using localStorage
+  function handleAuth() {
+    const username = document.getElementById('username')?.value;
+    const password = document.getElementById('password')?.value;
+
+    if (!username || !password || password.length < 6) {
+      alert('Username and password (min 6 characters) required');
+      return;
     }
 
-    async function handleAuth() {
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
+    const users = getUsers();
 
-      if (!username || !password || password.length < 6) {
-        alert('Username and password (min 6 characters) are required');
-        return;
-      }
-
-      if (isLogin) {
-        const res = await fetch('/api/login', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ username, password })
-        });
-        const data = await res.json();
-        if (res.ok) {
-          localStorage.setItem('token', data.token);
-          alert('Login successful');
-          window.location.href = 'homepage.html';
-        } else {
-          alert(data.message);
-        }
+    if (isLogin) {
+      // LOGIN
+      const found = users.find(u => u.username === username && u.password === password);
+      if (found) {
+        alert("Login successful");
+        localStorage.setItem("loggedInUser", JSON.stringify(found));
+        window.location.href = "homepage.html";
       } else {
-        const email = document.getElementById('email').value;
-        if (!email || !email.includes('@')) {
-          alert('Please enter a valid email');
-          return;
-        }
-        const res = await fetch('/api/register', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ username, email, password })
-        });
-        const data = await res.json();
-        if (res.ok) {
-          alert(data.message);
-          toggleForm();
-        } else {
-          alert(data.message);
-        }
+        alert("Invalid username or password");
       }
-    }
-
-    async function handleAdminLogin() {
-      const username = document.getElementById('adminusername').value;
-      const password = document.getElementById('adminpassword').value;
-
-      const res = await fetch('/api/login', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ username, password })
-      });
-      const data = await res.json();
-      if (res.ok && data.role === 'admin') {
-        localStorage.setItem('token', data.token);
-        alert('Admin login successful');
-        window.location.href = 'adminhome.html';
-      } else {
-        alert(data.message || 'Admin access required');
-      }
-    }
-
-    function forgotPassword() {
-      document.getElementById('authContainer').style.display = 'none';
-      document.getElementById('resetContainer').style.display = 'block';
-    }
-
-    async function sendOTP() {
-      const email = document.getElementById('resetEmail').value;
+    } else {
+      // REGISTER
+      const email = document.getElementById('email')?.value;
       if (!email || !email.includes('@')) {
         alert('Please enter a valid email');
         return;
       }
-      const res = await fetch('/api/forgot-password', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ email })
-      });
-      const data = await res.json();
-      if (res.ok) {
-        alert(data.message);
-        document.getElementById('resetContainer').style.display = 'none';
-        document.getElementById('otpContainer').style.display = 'block';
-      } else {
-        alert(data.message);
-      }
-    }
 
-    async function verifyOTP() {
-      const otp = document.getElementById('otpInput').value;
-      if (otp) {
-        document.getElementById('otpContainer').style.display = 'none';
-        document.getElementById('newPasswordContainer').style.display = 'block';
-      } else {
-        alert('Please enter OTP');
-      }
-    }
-
-    async function resetPassword() {
-      const newPassword = document.getElementById('newPassword').value;
-      const email = document.getElementById('resetEmail').value;
-      const otp = document.getElementById('otpInput').value;
-
-      if (!newPassword || newPassword.length < 6) {
-        alert('Please enter a password (min 6 characters)');
+      const exists = users.some(u => u.username === username || u.email === email);
+      if (exists) {
+        alert("User with this username or email already exists");
         return;
       }
 
-      const res = await fetch('/api/reset-password', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ email, otp, newPassword })
-      });
-      const data = await res.json();
-      if (res.ok) {
-        alert(data.message);
-        showLogin();
-      } else {
-        alert(data.message);
-      }
+      users.push({ username, email, password, role: "user" });
+      saveUsers(users);
+      alert("Registration successful. You can now login.");
+      toggleForm();
+    }
+  }
+
+  // 🔐 Admin Login (hard-coded for now)
+  function handleAdminLogin() {
+    const username = document.getElementById('adminusername').value;
+    const password = document.getElementById('adminpassword').value;
+
+    // you can change these credentials
+    if (username === "admin" && password === "admin123") {
+      alert("Admin login successful");
+      localStorage.setItem("loggedInAdmin", JSON.stringify({ username: "admin", role: "admin" }));
+      window.location.href = "adminhome.html";
+    } else {
+      alert("Invalid admin credentials");
+    }
+  }
+
+  // 🔁 Forgot Password Flow (localStorage-based)
+  function forgotPassword() {
+    document.getElementById('authContainer').style.display = 'none';
+    document.getElementById('resetContainer').style.display = 'block';
+  }
+
+  function sendOTP() {
+    const email = document.getElementById('resetEmail').value;
+    if (!email || !email.includes('@')) {
+      alert('Please enter a valid email');
+      return;
     }
 
-    function showLogin() {
-      document.getElementById('resetContainer').style.display = 'none';
+    const users = getUsers();
+    const user = users.find(u => u.email === email);
+    if (!user) {
+      alert("No user found with this email");
+      return;
+    }
+
+    // generate simple 4-digit OTP
+    currentOtp = Math.floor(1000 + Math.random() * 9000).toString();
+    currentOtpEmail = email;
+
+    // In real project OTP goes via email; here we just show it for demo
+    alert("OTP sent to your email (demo OTP: " + currentOtp + ")");
+
+    document.getElementById('resetContainer').style.display = 'none';
+    document.getElementById('otpContainer').style.display = 'block';
+  }
+
+  function verifyOTP() {
+    const otp = document.getElementById('otpInput').value;
+    if (!otp) {
+      alert("Please enter OTP");
+      return;
+    }
+
+    if (otp === currentOtp) {
+      alert("OTP verified");
       document.getElementById('otpContainer').style.display = 'none';
-      document.getElementById('newPasswordContainer').style.display = 'none';
-      document.getElementById('authContainer').style.display = 'block';
+      document.getElementById('newPasswordContainer').style.display = 'block';
+    } else {
+      alert("Invalid OTP");
+    }
+  }
+
+  function resetPassword() {
+    const newPassword = document.getElementById('newPassword').value;
+    if (!newPassword || newPassword.length < 6) {
+      alert("Password must be at least 6 characters");
+      return;
     }
 
-    document.querySelectorAll('input').forEach(input => {
-      input.addEventListener('keypress', (e) => {
-        if (e.key === 'Enter') {
-          if (input.id === 'username' || input.id === 'password') handleAuth();
-          if (input.id === 'adminusername' || input.id === 'adminpassword') handleAdminLogin();
-          if (input.id === 'resetEmail') sendOTP();
-          if (input.id === 'otpInput') verifyOTP();
-          if (input.id === 'newPassword') resetPassword();
-        }
-      });
-    });
-	
-	localstoage();
-  </script>
+    const users = getUsers();
+    const idx = users.findIndex(u => u.email === currentOtpEmail);
+    if (idx === -1) {
+      alert("User not found for password reset");
+      return;
+    }
+
+    users[idx].password = newPassword;
+    saveUsers(users);
+
+    // clear OTP
+    currentOtp = null;
+    currentOtpEmail = null;
+
+    alert("Password reset successful. Please login with new password.");
+    showLogin();
+  }
+
+  function showLogin() {
+    document.getElementById('resetContainer').style.display = 'none';
+    document.getElementById('otpContainer').style.display = 'none';
+    document.getElementById('newPasswordContainer').style.display = 'none';
+    document.getElementById('authContainer').style.display = 'block';
+  }
+</script>
+
 </body>
 </html>
